# jeju

./: .dockerignore  .gitignore  .gitmodules  README.md  biome.json  bun.lockb  docker-compose.decentralized.yml  docker-compose.stage2.yml  docker-compose.yml  env.decentralized.example  env.example  eslint.config.js  knip.json  package.json  tsconfig.json  turbo.json
.cursor/rules/: important.mdc  typescript-types.mdc
.github/workflows/: compute-ci.yml  crucible-ci.yml  deploy-mainnet.yml  deploy-testnet.yml  e2e-synpress.yml  mirror-to-jejugit.yml  node-release.yml  publish-jejupkg.yml  publish-packages.yml  security-audit.yml  test-master.yml  wallet-ci.yml
apps/autocrat/: .gitignore  README.md  deployment-localnet.json  jeju-manifest.json  package.json
apps/bazaar/: README.md  bunfig.toml  index.html  jeju-manifest.json  next.config.js  package.json  playwright-wallet.config.ts  playwright.config.ts  synpress.config.ts  tsconfig.json
apps/cdn/: README.md  package.json
apps/compute/: Dockerfile  Dockerfile.bridge  Dockerfile.trigger  README.md  env.example  package.json  (+2 more)
apps/node/src-tauri/: Cargo.toml  tauri.conf.json
apps/node/src-tauri/icons/: .gitkeep
apps/node/src-tauri/src/: config.rs  earnings.rs  hardware.rs  main.rs  state.rs  tee.rs  wallet.rs
apps/node/src-tauri/src/commands/: agent.rs  bots.rs  config.rs  earnings.rs  hardware.rs  mod.rs  services.rs  staking.rs  wallet.rs
apps/node/src-tauri/src/services/: compute.rs  cron.rs  mod.rs  oracle.rs  proxy.rs  rpc.rs  sequencer.rs  solver.rs  storage.rs  xlp.rs
apps/vpn/src-tauri/: Cargo.toml  tauri.conf.json
apps/vpn/src-tauri/src/: config.rs  dws.rs  main.rs  state.rs
apps/vpn/src-tauri/src/commands/: auth.rs  contribution.rs  mod.rs  settings.rs  vpn.rs
apps/vpn/src-tauri/src/contribution/: mod.rs
apps/vpn/src-tauri/src/vpn/: mod.rs  node_discovery.rs  tunnel.rs  wireguard.rs
patches/: @fastify%2Fstatic@8.3.0.patch
scripts/: README.md  bootstrap-localnet-complete.ts  build.ts  check-oif-eil-readiness.ts  check-ports.ts  check-testnet-deployment.ts  check-testnet-readiness.ts  check-vendor-security.ts  cleanup-processes.ts  deploy-all-oif-eil.ts  deploy-and-validate-aa.ts  deploy-app.ts  deploy-cloud-integration.ts  deploy-contracts.ts  deploy-dao-full.ts  deploy-dao-simple.ts  deploy-federation.ts  deploy-frontend.ts  deploy-oif.ts  deploy-tee-gpu.ts  deploy-testnet-full.ts  deploy.ts  dev-compute.ts  dev-with-vendor.ts  dev.ts  fund-testnet-deployer.ts  fund-xlp-testnets.ts  list-apps.ts  migrate-secrets.ts  preflight-check.ts  preflight-testnet.ts  publish-packages.ts  register-agents.ts  register-triggers.ts  seed-providers.ts  setup-apps.ts  setup-devnet.ts  setup-testnet-deployer.ts  setup-testnet.ts  show-wallet-config.ts  (+27 more)
(+2671 files in other folders)
