[package]
name = "jeju-node"
version = "0.1.0"
description = "Jeju Node - Run infrastructure and earn rewards"
authors = ["Jeju Network"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "jeju_node_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "jeju-node"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ethers = "2"
alloy = { version = "0.1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
sysinfo = "0.30"
nvml-wrapper = { version = "0.9", optional = true }
once_cell = "1"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
nvidia = ["nvml-wrapper"]

