[package]
name = "jeju-vpn"
version = "0.1.0"
description = "Jeju VPN - Free, decentralized VPN"
authors = ["Jeju Network"]
edition = "2021"

[lib]
name = "jeju_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WireGuard (userspace implementation)
boringtun = "0.6"

# TUN interface
tun = { version = "0.6", features = ["async"] }

# Networking
trust-dns-resolver = "0.23"

# Crypto
base64 = "0.22"
rand = "0.8"
x25519-dalek = "2"

# Ethereum
alloy = { version = "0.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }

